# MATRIX-CLI

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  Matrixcodes.py  README.md  config.json  matrix_main.py  pyproject.toml  requirements.txt  test_enhanced.py  test_matrixcodes.py  test_notation.py
matrixcalc/: __init__.py
matrixcalc/caching/: __init__.py  cache.py
matrixcalc/cli/: __init__.py  __main__.py  commands.py
matrixcalc/config/: __init__.py  schema.json  settings.py
matrixcalc/core/: __init__.py  backends.py  manager.py  matrix.py  performance.py
matrixcalc/io/: __init__.py  formats.py  utils.py
matrixcalc/logging/: __init__.py  setup.py
matrixcalc/plugins/: __init__.py
matrixcalc/security/: __init__.py  validation.py
