[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-calculator-cli"
version = "2.3.0"
description = "Advanced Matrix Calculator CLI with symbolic computation, parallel processing, and extensible plugin system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matrix Calculator Team", email = "matrix-calc@example.com"}
]
maintainers = [
    {name = "Matrix Calculator Team", email = "matrix-calc@example.com"}
]
keywords = ["matrix", "calculator", "linear-algebra", "symbolic", "cli", "mathematics", "plugins", "parallel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "sympy>=1.9,<2.0.0",
    "colorama>=0.4.4,<1.0.0",
    "rich>=10.0.0,<14.0.0",
    "tqdm>=4.62.0,<5.0.0",
    "scipy>=1.7.0,<2.0.0",
    "psutil>=5.8.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0,<8.0.0",
    "pytest-cov>=2.10.0,<5.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "mypy>=0.900,<2.0.0",
    "black>=21.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pre-commit>=2.15.0,<4.0.0",
]
test = [
    "pytest>=6.0.0,<8.0.0",
    "pytest-cov>=2.10.0,<5.0.0",
    "hypothesis>=6.0.0,<7.0.0",
]
lint = [
    "mypy>=0.900,<2.0.0",
    "black>=21.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
]
excel = [
    "pandas>=1.3.0,<3.0.0",
    "openpyxl>=3.0.0,<4.0.0",
]
parquet = [
    "pyarrow>=5.0.0,<15.0.0",
]
all = [
    "pandas>=1.3.0,<3.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "pyarrow>=5.0.0,<15.0.0",
    "pytest>=6.0.0,<8.0.0",
    "pytest-cov>=2.10.0,<5.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "mypy>=0.900,<2.0.0",
    "black>=21.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pre-commit>=2.15.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/example/matrix-calculator-cli"
Repository = "https://github.com/example/matrix-calculator-cli.git"
Documentation = "https://github.com/example/matrix-calculator-cli#readme"
"Bug Tracker" = "https://github.com/example/matrix-calculator-cli/issues"

[project.scripts]
matrix = "matrixcalc.cli.__main__:main"

[project.gui-scripts]

[tool.setuptools]
packages = ["matrixcalc"]

[tool.setuptools.package-data]
matrixcalc = ["*.py", "*.md", "*.txt"]

[tool.setuptools.package-dir]
matrixcalc = "matrixcalc"

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo", "*.pyd", ".git*", ".DS_Store", "*.egg-info"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "sympy.*",
    "colorama.*",
    "rich.*",
    "tqdm.*",
]
ignore_missing_imports = true

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["B011"]

[tool.ruff.isort]
known-first-party = ["matrixcalc"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["matrixcalc"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
